[gd_scene load_steps=3 format=3 uid="uid://jtp8mj5j3bfu"]

[ext_resource type="Script" path="res://scripts/setup_scene.gd" id="1_eqidk"]
[ext_resource type="Texture2D" uid="uid://cr8vus0nkyqw1" path="res://art/hot_dice.png" id="2_6ynfx"]

[node name="Setup_scene" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_eqidk")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 401.0
offset_top = 476.0
offset_right = 482.0
offset_bottom = 537.0
text = "START"

[node name="ShowCredits" type="Button" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 475.0
offset_right = 735.0
offset_bottom = 535.0
text = "CREDITS"

[node name="HotDice" type="Sprite2D" parent="."]
position = Vector2(562, 330)
texture = ExtResource("2_6ynfx")

[connection signal="pressed" from="StartButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="ShowCredits" to="." method="_on_CreditsButton_pressed"]
